--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "UglifyJS"]
-	path = UglifyJS
+	path = tools/eliminator/node_modules/uglify-js
 	url = https://github.com/mishoo/UglifyJS
