--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "UglifyJS"]
+[submodule "tools/eliminator/node_modules/uglify-js"]
 	path = tools/eliminator/node_modules/uglify-js
 	url = https://github.com/mishoo/UglifyJS
